--- a/index.html
+++ b/index.html
@@ -1,38 +1,46 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      charset="UTF-8"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Factory Se Dukan</title>
-    <!-- SEO Meta Tags -->
-    <meta name="description" content="Factory Se Dukan - Buy directly from factories. Best deals on footwear, chappals, and more. Wholesale prices, top quality, new arrivals." />
-    <meta name="keywords" content="factory, wholesale, chappal, footwear, shoes, deals, new arrivals, best price, bulk, buy online" />
-    <meta name="author" content="Factory Se Dukan" />
-    <meta property="og:title" content="Factory Se Dukan" />
-    <meta property="og:description" content="Buy directly from factories. Best deals on footwear, chappals, and more at wholesale prices." />
-    <meta property="og:image" content="/favicon.ico" />
-    <meta property="og:url" content="https://factorysedukan.com" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Factory Se Dukan" />
-    <meta name="twitter:description" content="Buy directly from factories. Best deals on footwear, chappals, and more at wholesale prices." />
-    <meta name="twitter:image" content="/favicon.ico" />
-    <!-- End SEO Meta Tags -->
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+  <link rel="stylesheet" type="text/css" charset="UTF-8"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Factory Se Dukan</title>
+  <!-- SEO Meta Tags -->
+  <meta name="description"
+    content="Factory Se Dukan - Buy directly from factories. Best deals on footwear, chappals, and more. Wholesale prices, top quality, new arrivals." />
+  <meta name="keywords"
+    content="factory, wholesale, chappal, footwear, shoes, deals, new arrivals, best price, bulk, buy online" />
+  <meta name="author" content="Factory Se Dukan" />
+  <meta property="og:title" content="Factory Se Dukan" />
+  <meta property="og:description"
+    content="Buy directly from factories. Best deals on footwear, chappals, and more at wholesale prices." />
+  <meta property="og:image" content="/favicon.ico" />
+  <meta property="og:url" content="https://factorysedukan.com" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Factory Se Dukan" />
+  <meta name="twitter:description"
+    content="Buy directly from factories. Best deals on footwear, chappals, and more at wholesale prices." />
+  <meta name="twitter:image" content="/favicon.ico" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7G6KW1H6GN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-7G6KW1H6GN');
+  </script>
+  <!-- End SEO Meta Tags -->
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
