--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Factory Se Dukan</title>
+  <title>Footwear Mandi</title>
   <!-- SEO Meta Tags -->
   <meta name="description"
     content="Factory Se Dukan - Buy directly from factories. Best deals on footwear, chappals, and more. Wholesale prices, top quality, new arrivals." />
@@ -20,7 +20,7 @@
   <meta property="og:description"
     content="Buy directly from factories. Best deals on footwear, chappals, and more at wholesale prices." />
   <meta property="og:image" content="/favicon.ico" />
-  <meta property="og:url" content="https://factorysedukan.com" />
+  <meta property="og:url" content="https://footwearmandi.com" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Factory Se Dukan" />
